<resources>
    <string name="app_name">Blood-pressure-bpm-tracker</string>
    <string name="main_name">Blood Pressure BPM Tracker</string>
    <string name="history_name">History</string>
    <string name="add_record_name">New Record</string>
    <string name="save">Save</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="all_history">All History</string>
    <string name="history">History</string>
    <string name="time_format">%1\$s:%2\$s</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="mmhg">(mmHg)</string>
    <string name="bmp">(BMP)</string>
    <string name="fab_content_desc">Button for adding records</string>
</resources>